# CONCH

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
conch/downstream/: tile_datasets.py  utils.py  wsi_datasets.py  zeroshot_path.py
conch/open_clip_custom/: __init__.py  coca_model.py  constants.py  custom_tokenizer.py  factory.py  transform.py  transformer.py  vision_tower.py
conch/open_clip_custom/model_configs/: conch_ViT-B-16.json
conch/open_clip_custom/tokenizers/: conch_byte_level_bpe_uncased.json
notebooks/: MI-zeroshot_classification_example_ensemble.ipynb  basics_usage.ipynb  zeroshot_classification_example_ensemble.ipynb  zeroshot_classification_example_starter.ipynb  zeroshot_retrieval_example.ipynb
prompts/: crc100k_prompts_all_per_class.json  nsclc_prompts_all_per_class.json
