[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conch"
version = "0.1.0"
description = "CONCH: a vision language foundation model for human pathology."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC BY-NC 4.0",
]
dependencies = [
    "torch>=2.0.1", "torchvision",
    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14",
    "numpy", "scikit-learn", "timm==0.9.8",
    "regex", "ftfy", "h5py", "pandas"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "scripts*", "tests*", "checkpoints*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "scripts*", "tests*", "checkpoints*"]
